...

NSString * const kCellSimpleMessageIdentifier = @"CTInboxSimpleMessageCell";
NSString * const kCellCarouselMessageIdentifier = @"CTCarouselMessageCell";
NSString * const kCellCarouselImgMessageIdentifier = @"CTCarouselImageMessageCell";
NSString * const kCellIconMessageIdentifier = @"CTInboxIconMessageCell";

NSString * const kDefaultTab = @"All";
static const float kCellSpacing = 6;
static const int kMaxTags = 3;

@interface CleverTapInboxViewController () <UITableViewDelegate, UITableViewDataSource, UIScrollViewDelegate>

@property (nonatomic, copy) NSArray<CleverTapInboxMessage *> *messages;
...
    [self.tableView registerNib:[UINib nibWithNibName:[CTInboxUtils getXibNameForControllerName:NSStringFromClass([CTInboxIconMessageCell class])]
                                               bundle:[CTInboxUtils bundle: CTInboxIconMessageCell.class]]
         forCellReuseIdentifier:kCellIconMessageIdentifier];
}

- (NSString *)getTitle {
    return self.config.title ? self.config.title : @"Notifications";
}

- (void)viewWillTransitionToSize:(CGSize)size withTransitionCoordinator:(id<UIViewControllerTransitionCoordinator>)coordinator {
    [coordinator animateAlongsideTransition:^(id<UIViewControllerTransitionCoordinatorContext> context){
        [self loadView];
        [self registerNibs];
...
